--- a/.env
+++ b/.env
@@ -19,3 +19,11 @@ APP_SECRET=f22e5562ded2ca8366e1978eb21698f0
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11"
+# IMPORTANT: You MUST also configure your db driver and server_version in config/packages/doctrine.yaml
+DATABASE_URL=mysql://root:root@127.0.0.1:3306/symfony_project
+###< doctrine/doctrine-bundle ###
