--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,14 @@
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
+        "symfony/maker-bundle": "^1.14",
+        "symfony/orm-pack": "^1.0",
         "symfony/twig-pack": "^1.0",
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^6.2",
+        "doctrine/doctrine-fixtures-bundle": "^3.2",
         "phpunit/phpunit": "^8.4",
         "symfony/browser-kit": "4.3.*",
         "symfony/css-selector": "4.3.*"
